@@ -1,5 +1,10 @@
 2007-05-22  Vitaly Alexeev <tishka92@yahoo.com>
 
+	* gameswf/gameswf_as_sprite.cpp: fixed get_depth()
+	* gameswf/gameswf_test_ogl.cll: added printf("Playing ..., version ...")
+	
+2007-05-22  Vitaly Alexeev <tishka92@yahoo.com>
+
 	* gameswf/win32/VC7/gameswf.vcproj: updated
 	* gameswf/plugins/lib3ds/gameswf_3ds.cpp: ported to VC7
 
